fix(submit-buttons): all submit form button are now primary, on mobile make button bigger

--- a/fe/src/pages/permissions/permissions.scss
+++ b/fe/src/pages/permissions/permissions.scss
@@ -48,4 +48,9 @@
         font-weight: bold;
         margin: 0;
     }
+
+    .head,
+    .permissions-list {
+        min-width: 830px;
+    }
 }
